Activity timeline test

--- a/force-app/main/default/lwc/colorpickerDemo/colorpickerDemo.html
+++ b/force-app/main/default/lwc/colorpickerDemo/colorpickerDemo.html
@@ -1,6 +1,7 @@
 <template>
     <lightning-card>
         <div class="slds-p-horizontal_x-small">
+            <h1>{staticStageOne}</h1>
             <lightning-input type="color" label="Color" value="#931D1D" onchange={handleChange}>
             </lightning-input>
             <h3>Selected color = {color}</h3>
